--- a/TestCodePjct/TestCodePjct.vcxproj.filters
+++ b/TestCodePjct/TestCodePjct.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="MAIN.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="TEST00.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MAIN.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="TEST00.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
