ファイル追加、コピペ

--- a/TestCodePjct/TestCodePjct.vcxproj
+++ b/TestCodePjct/TestCodePjct.vcxproj
@@ -66,10 +66,12 @@
   <ItemGroup>
     <ClInclude Include="MAIN.h" />
     <ClInclude Include="TEST00.h" />
+    <ClInclude Include="TEST01.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MAIN.cpp" />
     <ClCompile Include="TEST00.cpp" />
+    <ClCompile Include="TEST01.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
