--- a/TestCodePjct/TestCodePjct.vcxproj
+++ b/TestCodePjct/TestCodePjct.vcxproj
@@ -65,11 +65,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="MAIN.h" />
-    <ClInclude Include="TEST01.h" />
+    <ClInclude Include="TEST.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MAIN.cpp" />
-    <ClCompile Include="TEST01.cpp" />
+    <ClCompile Include="TEST.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
